# routes/api.php
@@ -68,7 +68,6 @@ Route::middleware(['auth:api', 'organization.company-context'])
         Route::put('companies/{company}/entitlements', [OrganizationController::class, 'updateEntitlements'])->name('companies.entitlements.update');
         Route::get('companies/{company}/api-keys', [OrganizationController::class, 'apiKeys'])->name('companies.api-keys.index');
         Route::post('companies/{company}/api-keys', [OrganizationController::class, 'storeApiKey'])->name('companies.api-keys.store');
-        Route::get('companies/{company}/api-keys/{apiKey}', [OrganizationController::class, 'showApiKey'])->name('companies.api-keys.show');
         Route::post('companies/{company}/api-keys/{apiKey}/rotate', [OrganizationController::class, 'rotateApiKey'])->name('companies.api-keys.rotate');
         Route::post('companies/{company}/api-keys/{apiKey}/revoke', [OrganizationController::class, 'revokeApiKey'])->name('companies.api-keys.revoke');
 
@@ -132,20 +131,17 @@ Route::middleware(['auth:api', 'organization.company-context'])
 
         Route::get('categories', [InventoryController::class, 'categories'])->name('categories.index');
         Route::post('categories', [InventoryController::class, 'storeCategory'])->name('categories.store');
-        Route::get('categories/{category}', [InventoryController::class, 'showCategory'])->name('categories.show');
         Route::patch('categories/{category}', [InventoryController::class, 'updateCategory'])->name('categories.update');
         Route::post('categories/{category}/move', [InventoryController::class, 'moveCategory'])->name('categories.move');
         Route::delete('categories/{category}', [InventoryController::class, 'destroyCategory'])->name('categories.destroy');
 
         Route::get('brands', [InventoryController::class, 'brands'])->name('brands.index');
         Route::post('brands', [InventoryController::class, 'storeBrand'])->name('brands.store');
-        Route::get('brands/{brand}', [InventoryController::class, 'showBrand'])->name('brands.show');
         Route::patch('brands/{brand}', [InventoryController::class, 'updateBrand'])->name('brands.update');
         Route::delete('brands/{brand}', [InventoryController::class, 'destroyBrand'])->name('brands.destroy');
 
         Route::get('units-of-measure', [InventoryController::class, 'units'])->name('units.index');
         Route::post('units-of-measure', [InventoryController::class, 'storeUnit'])->name('units.store');
-        Route::get('units-of-measure/{unit}', [InventoryController::class, 'showUnit'])->name('units.show');
         Route::patch('units-of-measure/{unit}', [InventoryController::class, 'updateUnit'])->name('units.update');
         Route::delete('units-of-measure/{unit}', [InventoryController::class, 'destroyUnit'])->name('units.destroy');
 
